2003-07-10 claudiuc 
	* doc: added README.Tom from Thomas Pinz
	* improvement: added tosh-smcinit.c and tosh-superio.h from Thomas
	Pinz which will replace the tosh5100-smcinit.c
	
2003-07-10 claudiuc 0.3-1 release

2003-07-10 claudiuc 
	* doc:  written smcinit.8, improved the other 2 man pages,
	improved README and INSTALL.
	* compile: generate config.h because it's needed by *.c files
	(fixed in Makefile)

2003-07-08 claudiuc 
	* doc: written INSTALL, updated AUTHORS, documentation from
	Rob Miller; fixed LSM file, written README, improved SuSE
	spec file
	* prog: added GPL notice in tosh5100-smcinit.c as Rob Miller pointed
	* redhat: RH 9.0 support (init script + spec file)
	
2003-07-02 claudiuc 
	* build: SuSE spec improved to generated compatible SuSE RPM
	* compile: GNU'fied; now both utilities have --version and --help
	options;
	* doc: separated manual pages and some improvements
2003-07-01  claudiuc
	* cosmetic: renamed toshsat1800-irdasetup to tosh1800-smcinit
	* build: improved original Makefile, spec file for SuSE, 
	my configure script for build system
	* compile: cleanup to remove warnings, broken compile; include
	headers for used libc functions
	* doc: first stage for my docs, manual page and renamed original
	docs to avoid confusion