@@ -1,52 +1,0 @@
-.TH TOSH5100-SMCINIT "8" "July 2003" "0.3" "Linux IrDA"
-.SH NAME
-tosh5100-smcinit \- initialize the IrDA controler on Toshiba laptops
-.SH SYNOPSIS
-.B tosh5100-smcinit
-[\fIOPTION\fR]
-.SH DESCRIPTION
-The Toshiba Satellite 5100 and Tecra 9100 has an Intel 82801CAM PCI bridge 
-which includes an LPC interface; on
-this interface is an SMSC LPC47N227 Super I/O chip. The 47N227 has various
-interfaces (FDC, 2xRS232, IR, parallel), but it seems that only the IR is
-connected out to a physical port on the case. There are no standard serial
-(RS232) ports on the 5100. Unfortunately the BIOS does not set up either the
-LPC interface or the SMC IR in a way that the Linux smc\-ircc driver expects.
-.PP
-This is the same story as on the Satellite 1800 but a different PCI bridge
-interface. The work here is based directly on Paul Hampson's post 
-to Linux\-IrDA, although I made a small change to get it working.
-.PP
-The program \fBtosh5100-smcinit\fR performs both of these functions, (1) set up the
-82801 LPC interface to pass the standard COM1 port (and hopefully the SMC FIR
-on DMA 3 as well \- but see below), and (2) set up the 47N227 to enable SIR on
-its UART2, assign it to 0x3f8 irq 3, and assign the FIR interface to 0x130.
-.PP
-\fBtosh5100-smcinit\fR sets SIR and FIR ioport addresses, DMA and IRQ of the SuperIO chip IrDA subsystem 
-then powers on the second UART. It also configures the PCI-ISA bridge to decode SIR and FIR ports. 
-All this configuration work should be rather done into the kernel but it was more practical and safe to make a 
-small testing tool of it. It can be probably extended to include configuration kludges for other similar 
-SuperIO and ISA bridge combination.
-.PP
-Testing was carried on a Toshiba Satellite 5100 and Toshiba Tecra 9100.
-.SH OPTIONS
-.TP
-\fB-V\fR, \fB--version\fR
-Show program version.
-.TP
-\fB-h\fR, \fB--help\fR
-Show program options.
-.SH AUTHOR
-This program was made by Rob Miller <rob@janerob.com>
-.SH CREDITS
-.PP 
-Cleanups and manual page written by Claudiu Costin <claudiuc@kde.org>. Documentation
-based on original irda.html by Rob Miller.
-.SH "SEE ALSO"
-.BR irattach (1),
-.br
-.BR irdadump (1),
-.br
-.BR http://www.janerob.com/rob/ts5100/ " Rob Miller's home page,"
-.br
-.BR http://irda.sourceforge.net/smcinit/ " the SMCINIT package home page." 
